# AutonomousVehicle

./: CMakeLists.txt  InputArgumentsParser.cpp  InputArgumentsParser.hpp  README.md
ClientApp/: CMakeLists.txt  MainApplication.cpp  MainApplication.hpp  main.cpp
ClientApp/Backend/: RobotAccessPoint.cpp  RobotAccessPoint.hpp
ClientApp/Gui/: ConnectionDialog.cpp  ConnectionDialog.hpp  MainApplication.cpp  MainApplication.hpp  QCameraView.cpp  QCameraView.hpp  QControlPanelView.cpp  QControlPanelView.hpp  QLadarVier.hpp  QLadarView.cpp
ClientApp/GuiController/: CameraController.cpp  CameraController.hpp  ConnectionController.cpp  ConnectionController.hpp  KeyPressController.cpp  KeyPressController.hpp  SetEnableManager.cpp  SetEnableManager.hpp
ClientApp/Tools/: SingletonAddOn.hpp
ClientApp/utils/: DumpImages.cpp  DumpImages.hpp
CommunicationProtocol/: CMakeLists.txt  Message.cpp  Message.hpp  MessageFormat.hpp  MessageIds.cpp  MessageIds.hpp
CommunicationProtocol/networking/: AccessPoint.cpp  AccessPoint.hpp  ClientAccessPoint.cpp  ClientAccessPoint.hpp  Connection.cpp  Connection.hpp  MessageDispatcher.cpp  MessageDispatcher.hpp  MessageSender.hpp
CommunicationProtocol/networking/detail/: MessageReconstruct.cpp  MessageReconstruct.hpp
CommunicationProtocol/proto/: CurrentRequestedSpeed.proto  PublishImage.proto  SetSpeed.proto
CommunicationProtocol/test/: CMakeLists.txt
CommunicationProtocol/test/ut/: CMakeLists.txt  MessageFormatTests.cpp  MessageTests.cpp
CommunicationProtocol/test/ut/proto/: SimpleProto.proto  SplitableProto.proto
Components/: CameraProcessingComponent.cpp  CameraProcessingComponent.hpp  Component.hpp  MotorTestComponents.cpp  MotorTestComponents.hpp  RobotComponent.cpp  RobotComponent.hpp  VideoProccessingComponent.cpp  VideoProccessingComponent.hpp
Drivers/: FDRaiiWrapper.cpp  FDRaiiWrapper.hpp  GpioDriver.cpp  GpioDriver.hpp  MotorsDriver.cpp  MotorsDriver.hpp  PwmDriver.cpp  SysHelper.cpp
EventLoop/: Event.hpp  EventIds.hpp  EventLoop.cpp  EventLoop.hpp  GuiSpeedRequest.hpp  MessageDecoder.cpp  MessageDecoder.hpp
ImageProcessing/: HoughtOperators.cpp  HoughtOperators.hpp  ImageOperators.hpp  (+2 more)
RobotClientLib/: CMakeLists.txt  CRobotInterface.h  RobotInterface.hpp  Types.hpp
RobotClientLib/detail/: CRobotInterface.cpp  Connection.cpp  Connection.hpp  IMessageHandler.hpp  ImageHandler.cpp  MessageReceiver.cpp  MessageReceiver.hpp  RequestedSpeed.cpp  RequestedSpeed.hpp  RobotAccessPoint.cpp  RobotAccessPoint.hpp  RobotInterface.cpp
RobotClientLib/detail/handlers/: IMessageHandler.hpp  ImageHandler.cpp  ImageHandler.hpp  RequestedSpeed.cpp  RequestedSpeed.hpp
RobotClientLib/detail/networking/: Connection.cpp  Connection.hpp  MessageDispatcher.cpp  MessageDispatcher.hpp  RobotAccessPoint.cpp  RobotAccessPoint.hpp
Tools/: Base64.cpp  Base64.hpp  CMakeLists.txt  Checksum.hpp  CreateTimmer.cpp  CreateTimmer.hpp  CurrentTime.cpp  ExecutionTimeMeasurement.hpp  SingletonAddOn.hpp  StringAlgorithms.cpp  StringAlgorithms.hpp
Tools/Coders/: Base64.cpp  Base64.hpp  HuffmanCoding.cpp  HuffmanCoding.hpp  HuffmanDecoding.cpp
Tools/Coders/detail/: heap.hpp
Tools/test/ut/: Base64Tests.cpp  CMakeLists.txt  CheckSumTest.cpp  HuffmanCodingTest.cpp
VehicleDriver/: AppConfig.cpp  AppConfig.hpp  Application.cpp  Application.hpp  ApplicationContext.cpp  ApplicationContext.hpp  CMakeLists.txt  InputArgumentsParser.cpp  InputArgumentsParser.hpp  data  main.cpp
VehicleDriver/Common/: ImageTypes.hpp
VehicleDriver/Components/: BirdEyeViewCalibration.cpp  BirdEyeViewCalibration.hpp  CalibrationComponent.cpp  CalibrationComponent.hpp  CameraProcessingComponent.cpp  CameraProcessingComponent.hpp  Component.hpp  MotorTestComponents.cpp  MotorTestComponents.hpp  PrototypeComponent.cpp  PrototypeComponent.hpp  RobotComponent.cpp  RobotComponent.hpp  VideoProccessingComponent.cpp  VideoProccessingComponent.hpp
VehicleDriver/Data/: instrincts_left.xml  instrincts_left640x480.xml  instrincts_right.xml  instrincts_right640x480.xml
VehicleDriver/Drivers/: CameraDriver.cpp  CameraDriver.hpp  EncodersDriver.cpp  EncodersDriver.hpp  FDRaiiWrapper.cpp  FDRaiiWrapper.hpp  GpioDriver.cpp  GpioDriver.hpp  MotorsDriver.cpp  MotorsDriver.hpp  PwmDriver.cpp  PwmDriver.hpp  SysHelper.cpp  SysHelper.hpp
VehicleDriver/Drivers/EPoolReactor/: EpollReactor.hpp  EpoolReactor.cpp  IEpollHandler.hpp
VehicleDriver/Drivers/Helpers/: FDRaiiWrapper.cpp  FDRaiiWrapper.hpp  SysHelper.cpp  SysHelper.hpp
VehicleDriver/Drivers/detail/: GpioDriverBase.cpp  GpioDriverBase.hpp
VehicleDriver/EventLoop/: Event.cpp  Event.hpp  EventIds.hpp  EventLoop.cpp  EventLoop.hpp  GuiSpeedRequest.hpp  MessageDecoder.cpp  MessageDecoder.hpp  MessageEncoder.cpp  MessageEncoder.hpp
VehicleDriver/ImageProcessing/: Calibration.cpp  Calibration.hpp  Pipeline.cpp  Pipeline.hpp  PipelineFactory.cpp  PipelineFactory.hpp  RoadLineDetection.cpp  RoadLineDetection.hpp
VehicleDriver/ImageProcessing/ImageOperations/: HoughtOperators.cpp  HoughtOperators.hpp  ImageOperators.hpp  RoadLineDetection.cpp  RoadLineDetection.hpp
VehicleDriver/ImageProcessing/ImagePipelines/: ApplyCalibration.cpp  ApplyCalibration.hpp  CorrectImage.cpp  CorrectImage.hpp  DumpImage.cpp  DumpImage.hpp  FlipImage.cpp  FlipImage.hpp  IPipelineEntity.hpp  ImageFromCamera.cpp  ImageFromCamera.hpp  ImageFromFile.cpp  ImageFromFile.hpp  PicturePublisher.cpp  PicturePublisher.hpp  PreviewEntity.cpp  PreviewEntity.hpp  SingleInputConsumer.hpp
VehicleDriver/Networking/: AccessPoint.cpp  AccessPoint.hpp  MessageSender.cpp  MessageSender.hpp  Session.cpp  Session.hpp
VehicleDriver/Services/: EncoderService.cpp  EncoderService.hpp  SpeedControlService.cpp  SpeedControlService.hpp
VehicleDriver/test/ut/: CMakeLists.txt  GpioDriverTests.cpp  MessageDecoderTests.cpp  MotorDriverTests.cpp  PwmDriverTest.cpp
VehicleDriver/test/ut/SysfsTestUtils/: GpioSequences.cpp  GpioSequences.hpp  Journal.cpp  Journal.hpp  PwMSequences.cpp  PwmSequences.hpp  SequenceVerifier.cpp  SequenceVerifier.hpp  SysFsDriverBase.hpp  SysfsHelperStub.cpp
(+20 files in other folders)
